# streamlit_geospatial_aws_interface

./: README.md  pyproject.toml  requirements.txt
src/: api_client.py  app.py  models.py
src/components/: sidebar.py
src/config/: styles.py
